# os_lab_4

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.md
doc/: Materials.md  Report_Lab_4.docx
include/: lib1.h  lib2.h
src/: lib1.c  lib2.c  program1.c  program2.c
tests/: input_1.txt  input_3.txt  input_4.txt  input_5.txt  output_true_1.txt  output_true_3.txt  output_true_4.txt  output_true_5.txt
